# alias-analysis-examples

./: .gitignore  AliasSet.cpp  AliasSet.h  CMakeLists.txt  README.md
examples/: file1.c  file2.c
